--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
       </tr>
     </thead>
     <tr>
+      <td>Summer 2019 - Present</td>
+      <td>SpecUdate CEO - Mobile Dating Game Application ( <strong><a href="https://specudate.com">Specudate.com</a>.</strong> )</td>
+    </tr>
+    <tr>
+      <td>Summer 2020</td>
+      <td>Software Engineer Intern at Bana Solutions</td>
+    </tr>
+    <tr>
       <td>Summer 2019</td>
       <td>Software Engineer Intern at NIST (National Institute Of Standards and Technology)</td>
     </tr>
@@ -87,7 +95,7 @@
         </td>
         <td>
           <center>
-            3.54
+            3.57
           </center>
         </td>
       </tr>
