--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </thead>
     <tr>
       <td>Summer 2019 - Present</td>
-      <td>SpecUdate CEO - Mobile Dating Game Application ( <strong><a href="https://specudate.com">Specudate.com</a>.</strong> )</td>
+      <td>SpecUdate CEO - Mobile Dating Game Application ( <strong><a href="https://specudate.com">Specudate.com</a></strong> )</td>
     </tr>
     <tr>
       <td>Summer 2020</td>
@@ -66,7 +66,7 @@
       <td>Software Engineer Intern at NIST (National Institute Of Standards and Technology)</td>
     </tr>
     <tr>
-      <td>Summer 2018-Present</td>
+      <td>Summer 2018 - 2019</td>
       <td>Starship Robotics Student Marketer</td>
     </tr>
     <tr>
