--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </td>
         <td>
           <center>
-            Junior
+            Senior
           </center>
         </td>
       </tr>
