--- a/hobbies.html
+++ b/hobbies.html
@@ -8,9 +8,11 @@
     <h3>My Hobbies</h3>
     <ol>
       <li>Hockey</li>
+      <li>Fishing</li>
       <li>Programming</li>
       <li>Developing</li>
       <li>Gaming</li>
+      <li>Entrepreneurship</li>
     </ol>
   </body>
 </html>
