--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
     <li>UNIX</li>
     <li>Windows</li>
     <li>WordPress</li>
+    <li>Java</li>
+    <li>C Launguage</li>
+    <li>SCRUM Process</li>
+    <li>AWS</li>
 
   </ul>
   <hr>
