--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
     <li>Windows</li>
     <li>WordPress</li>
     <li>Java</li>
-    <li>C Launguage</li>
-    <li>SCRUM Process</li>
+    <li>C/li>
+    <li>C#/li>
+    <li>SCRUM / Agile</li>
     <li>AWS</li>
 
   </ul>
